fixed logical error that it only keeps conversation where a new step was added in the final result

--- a/scripts/parse_multiturn_gpt_response.ipynb
+++ b/scripts/parse_multiturn_gpt_response.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "57it [00:00, 17896.20it/s]"
+      "29it [00:00, 2779.14it/s]"
      ]
     },
     {
@@ -89,6 +89,18 @@
       "        {\n",
       "            \"role\": \"user\",\n",
       "            \"value\": \"Can you provide more details on how genetic differences impact the effectiveness of immunotherapy for metastatic melanoma?\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"role\": \"chatbot\",\n",
+      "            \"value\": \"Genetic differences can impact immunotherapy effectiveness in several ways. Specific genetic mutations, such as those in the BRAF or NRAS genes, might influence a tumor's susceptibility to immune attacks. Additionally, variations in HLA genes can affect antigen presentation, altering immune recognition. Other genetic factors can impact the expression of checkpoint proteins like PD-1 and CTLA-4, potentially altering responses to checkpoint inhibitors. Identifying these genetic variations is crucial for tailoring immunotherapy treatments to maximize efficacy. Is there a particular genetic aspect you are curious about?\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"role\": \"user\",\n",
+      "            \"value\": \"What role do BRAF and NRAS mutations play in patient response to immunotherapy treatments?\"\n",
+      "        },\n",
+      "        {\n",
+      "            \"role\": \"chatbot\",\n",
+      "            \"value\": \"BRAF mutations, especially the V600E variant, often lead to rapid tumor growth but might also make tumors more recognizable to the immune system following targeted therapy. Patients with BRAF mutations may benefit from combined treatments using BRAF inhibitors and immunotherapy, potentially enhancing the immune response. NRAS mutations, on the other hand, are associated with varied responses to immunotherapy; they don't have direct targeted treatments like BRAF mutations do. However, they might influence the tumor microenvironment and immune landscape, affecting how well immunotherapy works. Determining a patient's specific mutation status helps in optimizing and selecting the best treatment approach. Do you need more information on testing for these mutations?\"\n",
       "        }\n",
       "    ]\n",
       "}\n",
@@ -110,7 +122,7 @@
     "\n",
     "situations_name = \"specialty_x_domain\"\n",
     "path_to_results = \"../results/gpt_results.jsonl\"\n",
-    "gpt_simulated = \"user\" ### Always ajust that\n",
+    "gpt_simulated = \"chatbot\" ### Always ajust that\n",
     "multiturn_path = \"../results/multiturn_\" + situations_name + \".jsonl\"\n",
     "\n",
     "# Read in the conversation we have so far and store them in a dict\n",
@@ -122,7 +134,6 @@
     "\n",
     "# Extract content from json\n",
     "print(\"Parsing GPT responses...\")\n",
-    "multiturn_results = []\n",
     "questions_failed_to_parse = []\n",
     "with open(path_to_results, 'r') as file:\n",
     "    for line in tqdm(file):\n",
@@ -131,9 +142,9 @@
     "            response_content = data.get(\"response\", {}).get(\"body\", {}).get(\"choices\", [])[0].get(\"message\", {}).get(\"content\", None)\n",
     "            id = data.get(\"custom_id\") # format \"0-0\" \"task_id - subtopic_id\"\n",
     "            if response_content and id:\n",
-    "                parsed_response = parse_gpt_response(response=response_content, id=id, current_history=multiturn_conv[id], gpt_simulated=gpt_simulated)\n",
+    "                parsed_response = parse_gpt_response(response=response_content, id=id, current_history=multiturn_conv.get(id, []), gpt_simulated=gpt_simulated)\n",
     "                if bool(parsed_response):\n",
-    "                    multiturn_results.append(parsed_response)\n",
+    "                    multiturn_conv[id] = parsed_response[\"conversation\"]\n",
     "                else:\n",
     "                    questions_failed_to_parse.append(id)\n",
     "        except json.JSONDecodeError as e:\n",
@@ -142,8 +153,8 @@
     "\n",
     "# Save to JSON file\n",
     "with open(multiturn_path, 'w') as jsonl_file:\n",
-    "    for line in multiturn_results:\n",
-    "        jsonl_file.write(json.dumps(line) + '\\n')\n",
+    "    for id, conv in multiturn_conv.items():\n",
+    "        jsonl_file.write(json.dumps({\"id\": id, \"conversation\": conv}) + '\\n')\n",
     "\n",
     "# Output the parsed data (for verification)\n",
     "print(f\"Medical prompts have been saved to {multiturn_path}\")\n",
