finished multiturn chat generation

--- a/scripts/multiturn_get_batch_prompts.ipynb
+++ b/scripts/multiturn_get_batch_prompts.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6321/6321 [00:01<00:00, 4430.15it/s]"
+      "100%|██████████| 1952/1952 [00:00<00:00, 7874.94it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Up to 20-6320 prompts with situations saved to ../results/situations_specialty_x_domain.jsonl\n"
+      "Up to 12-975 prompts with situations saved to ../results/situations_tasks_x_subtopics_part2.jsonl\n"
      ]
     },
     {
@@ -65,7 +65,7 @@
     "# Creates randomly system prompts for the user and the chatbot\n",
     "\n",
     "# Path for input data and to store prompts\n",
-    "initial_prompts_name = \"specialty_x_domain\"\n",
+    "initial_prompts_name = \"tasks_x_subtopics_part2\"\n",
     "initial_prompts_path = \"../results/parsed_prompts_\" + initial_prompts_name + \".json\"\n",
     "output_path = \"../results/situations_\" + initial_prompts_name + \".jsonl\"\n",
     "\n",
@@ -78,7 +78,7 @@
     "\n",
     "print(\"Creating list of situations and initial prompts\")\n",
     "\n",
-    "with open(output###_path, 'w') as file: ### only remove if the situations are new and the situations file is never used anywhere\n",
+    "with ###open(output_path, 'w') as file: ### only remove if the situations are new and the situations file is never used anywhere\n",
     "    for initial_prompt in tqdm(initial_prompts_list):\n",
     "        sampled_country = random.choice(countries.iloc[:, 0].tolist())\n",
     "        id = initial_prompt[\"id\"]\n",
@@ -87,6 +87,7 @@
     "            multiturn_style = get_multiturn_style(id=id, sampled_country=sampled_country, profession=profession, specialty=specialty, domain=domain)\n",
     "        else:\n",
     "            multiturn_style = get_multiturn_style(id=id, sampled_country=sampled_country)\n",
+    "\n",
     "        system_prompt_chatbot = multiturn_style.system_prompt_chatbot()\n",
     "        system_prompt_user = multiturn_style.system_prompt_user()\n",
     "        nbr_of_turns = multiturn_style.number_of_turns\n",
@@ -107,18 +108,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1952/1952 [00:00<00:00, 105110.68it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file to store the multiturn conversations for tasks_x_subtopics_part2 has been created\n",
+      "The file contains the initial prompt.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Create initial multiturn_situation .jsonl\n",
     "# Function to get the initial prompt\n",
     "\n",
-    "situations_name = \"specialty_x_domain\"\n",
+    "situations_name = \"tasks_x_subtopics_part2\"\n",
     "\n",
     "situations_path = \"../results/situations_\" + situations_name + \".jsonl\"\n",
     "output_path = \"../results/multiturn_\" + situations_name + \".jsonl\"\n",
     "\n",
     "multiturn_conversations = []\n",
-    "with open(situations_###path, 'r') as file: ### do only exectue if it is the first time\n",
+    "with ###open(situations_path, 'r') as file: ### do only exectue if it is the first time\n",
     "    for entry in file:\n",
     "        data = json.loads(entry)\n",
     "        line = {\n",
@@ -130,13 +154,17 @@
     "        multiturn_conversations.append(line)\n",
     "# Save to JSON file\n",
     "with open(output_path, 'w') as jsonl_file:\n",
-    "    for conv in multiturn_conversations:\n",
-    "        jsonl_file.write(json.dumps(conv) + '\\n')"
+    "    for conv in tqdm(multiturn_conversations):\n",
+    "        jsonl_file.write(json.dumps(conv) + '\\n')\n",
+    "\n",
+    "\n",
+    "print(f\"The file to store the multiturn conversations for {situations_name} has been created\")\n",
+    "print(f\"The file contains the initial prompt.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,14 +191,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 20071.32it/s]"
+      "100%|██████████| 10736/10736 [00:00<00:00, 34744.23it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "batch of 29 prompts saved to ../results/batched_prompts_specialty_x_domain_turn_3c.jsonl\n",
+      "batch of 3400 prompts saved to ../results/batched_prompts_tasks_x_subtopics_turn_3c.jsonl\n",
       "IMPORTANT: batches were created for turn 3 and chatbot\n"
      ]
     },
@@ -189,7 +217,7 @@
     "gpt_model = \"gpt-4o\"\n",
     "\n",
     "# Path for input data and to store prompts\n",
-    "situations_name = \"specialty_x_domain\"\n",
+    "situations_name = \"tasks_x_subtopics\"\n",
     "situations_path = \"../results/situations_\" + situations_name + \".jsonl\"\n",
     "multiturn_conv_path = \"../results/multiturn_\" + situations_name + \".jsonl\"\n",
     "turn = 3 # can be 1, 2 or 3\n",
@@ -200,17 +228,13 @@
     "# store prompts in a list\n",
     "situations = []\n",
     "with open(situations_path, 'r') as file:\n",
-    "    for i, line in enumerate(file):\n",
-    "        if i >= 100:\n",
-    "            break\n",
+    "    for i, line in enumerate(file): # i could be used in test mode with if i >= 100; break\n",
     "        situations.append(json.loads(line))\n",
     "\n",
     "# store multiturn convs in a dict\n",
     "multiturn_conv = {}\n",
     "with open(multiturn_conv_path, 'r') as file:\n",
-    "    for i, line in enumerate(file):\n",
-    "        if i >= 100:\n",
-    "            break\n",
+    "    for i, line in enumerate(file): # can use i if we want to test -> if i >= 100; break\n",
     "        line_as_json = json.loads(line)\n",
     "        multiturn_conv[line_as_json[\"id\"]] = line_as_json[\"conversation\"]\n",
     "\n",
