--- a/scripts/gpt_bacht_mode.ipynb
+++ b/scripts/gpt_bacht_mode.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
     "# Launch batch job\n",
     "# Decomment line below to run job using openai API in batch mode\n",
     "# WILL COST MONEY\n",
-    "script.process_batch_by_gpt(path_to_batched_prompts = file_path, description=f\"generate multiturn interactions for medical instruction tuning {situations_name}, turn: {str(turn)} {system}\")"
+    "# script.process_batch_by_gpt(path_to_batched_prompts = file_path, description=f\"generate multiturn interactions for medical instruction tuning {situations_name}, turn: {str(turn)} {system}\")"
    ]
   },
   {
