--- a/scripts/Worksheet.ipynb
+++ b/scripts/Worksheet.ipynb
@@ -2,57 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File updated successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
-    "# Define the file path\n",
-    "file_path = '../results/parsed_prompts_specialty_x_domain.json'\n",
+    "def concatenate_jsonl_files(file1, file2, output_file):\n",
+    "    \"\"\"\n",
+    "    Concatenates two .jsonl files into a single output file.\n",
     "\n",
-    "# Read the data from the JSON file\n",
-    "with open(file_path, 'r') as file:\n",
-    "    data = json.load(file)\n",
+    "    Parameters:\n",
+    "        file1 (str): Path to the first .jsonl file.\n",
+    "        file2 (str): Path to the second .jsonl file.\n",
+    "        output_file (str): Path to the output .jsonl file.\n",
+    "    \"\"\"\n",
+    "    with open(output_file, 'w', encoding='utf-8') as outfile:\n",
+    "        # Write content of the first file to the output file\n",
+    "        with open(file1, 'r', encoding='utf-8') as infile1:\n",
+    "            for line in infile1:\n",
+    "                outfile.write(line)\n",
+    "        \n",
+    "        # Write content of the second file to the output file\n",
+    "        with open(file2, 'r', encoding='utf-8') as infile2:\n",
+    "            for line in infile2:\n",
+    "                outfile.write(line)\n",
     "\n",
-    "# Modify the id field in each entry\n",
-    "for entry in data:\n",
-    "    entry['id'] = f\"20-{entry['id']}\"\n",
-    "\n",
-    "# Save the modified data back to the same JSON file\n",
-    "with open(file_path, 'w') as file:\n",
-    "    json.dump(data, file, indent=4)\n",
-    "\n",
-    "print(\"File updated successfully.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "system_prompt_chatbot = multiturn_style_1.system_prompt_chatbot()  + \"In the prompt you see the whole chat history. The chat started with the request from a healthcare worker. Your task is to answer the questions and only ask follow up questions, if the user did not provide enough information in its input.\"\n",
-    "system_prompt_user = multiturn_style_1.system_prompt_user()  + \"In the prompt you see the whole chat history. The chat started with your initial request. You want to get an answer to the first question you asked. Your task is to ask followup questions and to interact with the chatbot to get a clear answer to your initial, as a health care worker would do.\""
+    "# Example usage:\n",
+    "file1 = '../results/multiturn_tasks_x_subtopics.jsonl'\n",
+    "file2 = '../results/multiturn_tasks_x_subtopics_part2.jsonl'\n",
+    "output_file = '../results/combined.jsonl'\n",
+    "concatenate_jsonl_files(file1, file2, output_file)"
    ]
   },
   {
