cleaned format of multiturn chat dataset

--- a/scripts/Worksheet.ipynb
+++ b/scripts/Worksheet.ipynb
@@ -2,37 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File '../results/multiturn_tasks_x_subtopics.jsonl' updated successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
-    "def concatenate_jsonl_files(file1, file2, output_file):\n",
-    "    \"\"\"\n",
-    "    Concatenates two .jsonl files into a single output file.\n",
+    "# Define the file path\n",
+    "file_path = '../results/multiturn_tasks_x_subtopics.jsonl'\n",
     "\n",
-    "    Parameters:\n",
-    "        file1 (str): Path to the first .jsonl file.\n",
-    "        file2 (str): Path to the second .jsonl file.\n",
-    "        output_file (str): Path to the output .jsonl file.\n",
-    "    \"\"\"\n",
-    "    with open(output_file, 'w', encoding='utf-8') as outfile:\n",
-    "        # Write content of the first file to the output file\n",
-    "        with open(file1, 'r', encoding='utf-8') as infile1:\n",
-    "            for line in infile1:\n",
-    "                outfile.write(line)\n",
+    "# Function to modify the file\n",
+    "def update_jsonl_roles(file_path):\n",
+    "    try:\n",
+    "        # Read the file and modify the content\n",
+    "        updated_lines = []\n",
+    "        with open(file_path, 'r') as file:\n",
+    "            for line in file:\n",
+    "                entry = json.loads(line)\n",
+    "                for message in entry.get(\"conversation\", []):\n",
+    "                    if message[\"role\"] == \"chatbot\":\n",
+    "                        message[\"role\"] = \"assistant\"\n",
+    "                updated_lines.append(json.dumps(entry))\n",
     "        \n",
-    "        # Write content of the second file to the output file\n",
-    "        with open(file2, 'r', encoding='utf-8') as infile2:\n",
-    "            for line in infile2:\n",
-    "                outfile.write(line)\n",
+    "        # Write the updated content back to the same file\n",
+    "        with open(file_path, 'w') as file:\n",
+    "            file.write('\\n'.join(updated_lines))\n",
+    "        \n",
+    "        print(f\"File '{file_path}' updated successfully!\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: File '{file_path}' not found.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
     "\n",
-    "# Example usage:\n",
-    "file1 = '../results/multiturn_tasks_x_subtopics.jsonl'\n",
-    "file2 = '../results/multiturn_tasks_x_subtopics_part2.jsonl'\n",
-    "output_file = '../results/combined.jsonl'\n",
-    "concatenate_jsonl_files(file1, file2, output_file)"
+    "# Run the function\n",
+    "update_jsonl_roles(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File '../results/multiturn_tasks_x_subtopics.jsonl' updated successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Define the file path\n",
+    "file_path = '../results/multiturn_tasks_x_subtopics.jsonl'\n",
+    "\n",
+    "# Function to replace Unicode escape sequences with real characters\n",
+    "def replace_unicode_in_jsonl(file_path):\n",
+    "    try:\n",
+    "        # Read the file and decode Unicode escape sequences\n",
+    "        updated_lines = []\n",
+    "        with open(file_path, 'r') as file:\n",
+    "            for line in file:\n",
+    "                entry = json.loads(line)  # Parse JSON\n",
+    "                entry_str = json.dumps(entry, ensure_ascii=False)  # Convert to string with real characters\n",
+    "                updated_lines.append(entry_str)\n",
+    "        \n",
+    "        # Write the updated content back to the same file\n",
+    "        with open(file_path, 'w', encoding='utf-8') as file:\n",
+    "            file.write('\\n'.join(updated_lines))\n",
+    "        \n",
+    "        print(f\"File '{file_path}' updated successfully!\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: File '{file_path}' not found.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "# Run the function\n",
+    "replace_unicode_in_jsonl(file_path)"
    ]
   },
   {
