script to generate batch of additional prompts

--- a/scripts/generate_batch_of_prompts.ipynb
+++ b/scripts/generate_batch_of_prompts.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create batch of prompts\n",
-    "\n",
-    "#### Version 1 -> profession sepcialties x domains"
+    "### Create batch of prompts"
    ]
   },
   {
@@ -20,6 +18,13 @@
     "from multiturn_modul import MultiturnStyle, get_multiturn_style\n",
     "import pandas as pd\n",
     "import random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Version 1 -> profession sepcialties x domains"
    ]
   },
   {
