--- a/scripts/Worksheet.ipynb
+++ b/scripts/Worksheet.ipynb
@@ -2,48 +2,185 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Infants', 'Infants']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "age_ranges_file = \"../resources/age_categories.json\"\n",
+    "# store age ranges in a list\n",
+    "with open(age_ranges_file, 'r') as file:\n",
+    "    age_ranges = json.load(file)  # Load JSON data from file\n",
+    "ages = [dict[\"category\"] for dict in age_ranges]\n",
+    "random.choices(ages, k=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File '../results/multiturn_tasks_x_subtopics.jsonl' updated successfully!\n"
+      "High-income\n",
+      "Low-income\n",
+      "Lower middle income\n",
+      "Upper middle income\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['India', 'Ethiopia']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "countries_file = \"../resources/countries_by_income_category.csv\"\n",
+    "countries = pd.read_csv(countries_file)\n",
+    "\n",
+    "# Step 1: Group by 'Income Category'\n",
+    "groups = countries.groupby(\"Income Category\")\n",
+    "\n",
+    "# Step 2: Ensure at least two groups are available\n",
+    "if len(groups) < 2:\n",
+    "    raise ValueError(\"Not enough unique income categories to sample from.\")\n",
+    "\n",
+    "# Step 3: Randomly sample one country from two different categories\n",
+    "sampled_countries = []\n",
+    "for category, group in groups:\n",
+    "    sampled_countries.append(group.sample(n=1))\n",
+    "sampled_countries_df = pd.concat(sampled_countries).reset_index(drop=True).sample(2)\n",
+    "sampled_countries_df[\"Country\"].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Allergy and Immunology', 'Anesthesiology', 'Cardiology', 'Dermatology', 'Emergency Medicine', 'Endocrinology', 'Family Medicine', 'Gastroenterology', 'Geriatrics', 'Hematology', 'Infectious Disease', 'Internal Medicine', 'Nephrology', 'Neurology', 'Obstetrics and Gynecology', 'Oncology', 'Ophthalmology', 'Orthopedic Surgery', 'Otolaryngology (ENT)', 'Pathology', 'Pediatrics', 'Physical Medicine and Rehabilitation', 'Psychiatry', 'Pulmonology', 'Radiology', 'Rheumatology', 'Surgery', 'Urology']\n",
+      "['Critical Care Nursing', 'Emergency Nursing', 'Geriatric Nursing', 'Medical-Surgical Nursing', 'Neonatal Nursing', 'Oncology Nursing', 'Pediatric Nursing', 'Psychiatric Nursing', 'Public Health Nursing']\n",
+      "['Family Medicine', 'Emergency Medicine', 'Surgery', 'Dermatology', 'Orthopedics', 'Psychiatry']\n",
+      "['Clinical Pharmacy', 'Community Pharmacy', 'Consultant Pharmacy', 'Hospital Pharmacy', 'Industrial Pharmacy', 'Nuclear Pharmacy', 'Oncology Pharmacy']\n",
+      "['Cardiovascular and Pulmonary', 'Geriatric', 'Neurological', 'Orthopedic', 'Pediatric', 'Sports', \"Women's Health\"]\n",
+      "['Geriatric Occupational Therapy', 'Mental Health Occupational Therapy', 'Pediatric Occupational Therapy', 'Physical Rehabilitation', 'Hand Therapy']\n",
+      "['Fluency Disorders', 'Neurogenic Communication Disorders', 'Speech Sound Disorders', 'Voice Disorders', 'Swallowing Disorders']\n",
+      "['Diagnostic Radiology', 'Computed Tomography (CT)', 'Magnetic Resonance Imaging (MRI)', 'Nuclear Medicine', 'Ultrasound', 'Mammography']\n",
+      "['Clinical Chemistry', 'Hematology', 'Immunology', 'Microbiology', 'Molecular Diagnostics', 'Transfusion Medicine']\n",
+      "['Clinical Dietetics', 'Community Dietetics', 'Foodservice Management', 'Gerontological Nutrition', 'Pediatric Nutrition', 'Sports Nutrition']\n",
+      "['Adult Critical Care', 'Neonatal and Pediatric Care', 'Pulmonary Rehabilitation', 'Sleep Disorders']\n",
+      "['Emergency Medical Services', 'Critical Care Transport', 'Tactical EMS', 'Community Paramedicine']\n",
+      "['Sports Chiropractic', 'Pediatric Chiropractic', 'Geriatric Chiropractic', 'Rehabilitation']\n",
+      "['Podiatric Surgery', 'Sports Medicine', 'Diabetic Foot Care', 'Pediatric Podiatry']\n",
+      "['Pediatric Optometry', 'Geriatric Optometry', 'Vision Therapy', 'Contact Lens Specialist']\n",
+      "['Pediatric Audiology', 'Cochlear Implants', 'Balance Disorders', 'Hearing Aid Dispensing']\n",
+      "['Industrial Hygiene', 'Ergonomics', 'Risk Management']\n",
+      "['Clinical Social Work', 'Healthcare Administration', 'Mental Health Counseling', 'Palliative Care']\n",
+      "['Prenatal Genetics', 'Cancer Genetics', 'Pediatric Genetics', 'Cardiovascular Genetics']\n",
+      "['Lower Limb Prosthetics', 'Upper Limb Prosthetics', 'Spinal Orthotics', 'Pediatric Prosthetics and Orthotics']\n",
+      "['Child and Adolescent Psychology', 'Neuropsychology', 'Health Psychology', 'Forensic Psychology', 'Rehabilitation Psychology']\n"
      ]
     }
    ],
    "source": [
     "import json\n",
     "\n",
-    "# Define the file path\n",
-    "file_path = '../results/multiturn_tasks_x_subtopics.jsonl'\n",
+    "path_to_file1 = \"../resources/patient_age_medical_profession.json\"  # Replace with your desired output file name\n",
+    "path_to_file2 = \"../resources/medical_professions.json\"  # Replace with your desired output file name\n",
     "\n",
-    "# Function to modify the file\n",
-    "def update_jsonl_roles(file_path):\n",
-    "    try:\n",
-    "        # Read the file and modify the content\n",
-    "        updated_lines = []\n",
-    "        with open(file_path, 'r') as file:\n",
-    "            for line in file:\n",
-    "                entry = json.loads(line)\n",
-    "                for message in entry.get(\"conversation\", []):\n",
-    "                    if message[\"role\"] == \"chatbot\":\n",
-    "                        message[\"role\"] = \"assistant\"\n",
-    "                updated_lines.append(json.dumps(entry))\n",
-    "        \n",
-    "        # Write the updated content back to the same file\n",
-    "        with open(file_path, 'w') as file:\n",
-    "            file.write('\\n'.join(updated_lines))\n",
-    "        \n",
-    "        print(f\"File '{file_path}' updated successfully!\")\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"Error: File '{file_path}' not found.\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n",
     "\n",
-    "# Run the function\n",
-    "update_jsonl_roles(file_path)"
+    "with open(path_to_file1, 'r') as file:\n",
+    "    data1 = json.load(file)\n",
+    "\n",
+    "with open(path_to_file2, 'r') as file:\n",
+    "    data2 = json.load(file)\n",
+    "\n",
+    "for dict1, dict2 in zip(data1, data2):\n",
+    "    list_dict1 = [element[0] for element in dict1[\"specialties\"]]\n",
+    "    if dict2[\"specialties\"] == list_dict1:\n",
+    "        print(list_dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def process_file(input_file, output_file):\n",
+    "    data = []\n",
+    "    current_profession = None\n",
+    "    specialties = []\n",
+    "\n",
+    "    with open(input_file, 'r') as file:\n",
+    "        for line in file:\n",
+    "            line = line.strip()\n",
+    "\n",
+    "            # Skip empty lines\n",
+    "            if not line:\n",
+    "                continue\n",
+    "\n",
+    "            # Process profession (### lines)\n",
+    "            if line.startswith(\"###\"):\n",
+    "                if current_profession:\n",
+    "                    # Save the previous profession and its specialties\n",
+    "                    data.append({\n",
+    "                        \"profession\": current_profession,\n",
+    "                        \"specialties\": specialties\n",
+    "                    })\n",
+    "                # Extract profession name\n",
+    "                current_profession = line.replace(\"###\", \"\").strip(\" **\")\n",
+    "                specialties = []\n",
+    "            \n",
+    "            # Process specialties (lines starting with numbers)\n",
+    "            elif line[0].isdigit():\n",
+    "                # Extract specialty name and age categories\n",
+    "                specialty, age_categories = line.split(\":\")\n",
+    "                specialty = specialty.strip().split(\". \")[1].replace(\"*\", \"\")  # Remove number\n",
+    "                age_categories = [age.strip() for age in age_categories.split(\",\")]\n",
+    "                specialties.append([specialty, age_categories])\n",
+    "\n",
+    "    # Add the last profession to data\n",
+    "    if current_profession:\n",
+    "        data.append({\n",
+    "            \"profession\": current_profession,\n",
+    "            \"specialties\": specialties\n",
+    "        })\n",
+    "\n",
+    "    # Write the data to a JSON file\n",
+    "    with open(output_file, 'w') as json_file:\n",
+    "        json.dump(data, json_file, indent=2)\n",
+    "\n",
+    "# Usage\n",
+    "input_file = \"../resources/patient_age_medical_profession.txt\"  # Replace with your input file name\n",
+    "output_file = \"../resources/patient_age_medical_profession.json\"  # Replace with your desired output file name\n",
+    "process_file(input_file, output_file)"
    ]
   },
   {
