--- a/scripts/generate_batch_additional_batch_of_prompts.ipynb
+++ b/scripts/generate_batch_additional_batch_of_prompts.ipynb
@@ -82,6 +82,7 @@
     "    prompt_parts.append(f\"sex: {demographics[\"sex\"]}\\n\")\n",
     "    prompt_parts.append(f\"gender: {demographics[\"gender\"]}\\n\")\n",
     "    prompt_parts.append(\"Only include the generated prompt, adding extra details only if specified. Focus solely on a realistic prompt a physician might ask a medical AI chatbot.\")\n",
+    "    prompt = \"\".join(prompt_parts)\n",
     "    return prompt\n",
     "\n",
     "def fill_line(prompt_id, gpt_model, content, prompt, max_tokens):\n",
@@ -203,8 +204,6 @@
     "            line = fill_line()\n",
     "            file.write(json.dumps(line) + '\\n')\n",
     "            id += 1\n",
-    "\n",
-    "\n",
     "\n",
     "print(f\"batch of {id} prompts saved to {output_path}\")"
    ]
